fixing alignment issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -423,7 +423,7 @@ body {
 	text-align: center;
 }
 .clsOrgGenFormButtonRow{
-	margin-top: 130px;
+	margin-top: 88px;
 }
 .clsFormButtonNormal {
 	color: #373935;
